<resources>
    <string name="app_name">GrowTime</string>
    <string name="hardiness_zone">Hardiness Zone</string>
    <string name="zip_appear">Zip code will appear here</string>
    <string name="submit">Submit</string>
    <string name="inp_zc">Enter Valid U.S. Zip Code</string>
    <string name="rec_title">GrowTime Plant Recommendation</string>
    <string name="MyGarden">My Garden</string>
    <string name="Location">Location</string>
    <string name="GrowTime">GrowTime</string>
    <string name="RecommendPlants">Recommend Plants</string>
    <string name="CanIGrowThisHere">Can I Grow This Here?</string>
    <string name="AddPlant">Add Plant</string>
    <string name="EditPlant">Edit Plant</string>
    <string name="add_to_my_garden">Add to My Garden</string>
    <string name="added_to_my_garden">Added to My Garden</string>
    <string name="already_in_my_garden">Already in My Garden</string>
    <string name="my_garden_empty">No plants yet. Add some from Recommendations.</string>
</resources>