<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/main"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:text="@string/rec_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/zipcode_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/inp_zc"
                android:inputType="number"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/sub_butt"
                android:text="@string/submit"/>

            <TextView
                android:id="@+id/zip_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/zip_appear"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/hard_zone"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hardiness_zone"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:drawableStart="@drawable/plus"
                android:drawablePadding="4dp"
                android:scaleType="fitCenter" />

        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
